# TEMdb_client

./: .bumpversion.toml  README.md  pyproject.toml
.github/workflows/: main.yaml
scripts/: example.ipynb  generate_fake_data.py
tests/: conftest.py  test_client.py
