[project]
name = "TEMdb_client"
version = "0.1.0"
authors = [
    { name="Derrick Brittain", email="derrickb@alleninstitute.org" }
]
dependencies = [
    "httpx",
    "tenacity",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
